# foreman

./: .dockerignore  .env.example  .git-blame-ignore-revs  .gitattributes  .gitignore  CLEANUP_REPORT.md  DEPLOY.md  Dockerfile  GROUND_TRUTH.md  LICENSE  README.md  alembic.ini  docker-compose.yml  index.html  postgres.conf  pyproject.toml  railway.toml  railway.worker.toml
.github/workflows/: ci.yml
docs/: WALKTHROUGH.md
docs/compliance/: README.md  dsfa-foreman-vorlaeufig.md  dsgvo-assessment.md  eu-ai-act-assessment.md
docs/handoffs/: 2026-06-24-frontend-interaktivitaet-plan.md  2026-06-24-frontend-interaktivitaet.md
docs/models/: failure_prediction_model_card.md
docs/preview/: section-e.html
docs/research/: FOREMAN_Designstudie_Frontend.md  anonymisierung-werkerdaten.md  ausfallvorhersage-methodenwahl.md  drift-erkennung-verfahren.md  drift-reasoner-kalibrierung.md  prompt-injection-schutz.md  timescaledb-tuning-readings.md  vektor-suche-pgvector.md  wettbewerbslandschaft.md
docs/simulation/: szenarien.md  werker-notizen-stilguide.md
frontend/: .dockerignore  .gitignore  Dockerfile  README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  postcss.config.mjs  railway.toml  tsconfig.json  vitest.config.ts  vitest.setup.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/(app)/: layout.tsx
frontend/app/login/: page.tsx
frontend/app/styles/: tokens.generated.css
frontend/components/alarms/: acknowledge-action.test.tsx  acknowledge-action.tsx  alarm-aggregate.tsx  alarm-bundle-row.tsx  alarm-filter-bar.tsx  alarm-list.test.tsx  alarm-list.tsx  alarm-row.test.tsx  alarm-row.tsx  alarm-situation-header.tsx  alarm-styles.ts  alarms-view.test.tsx  alarms-view.tsx
frontend/components/atoms/: atoms.test.tsx  kpi-tile.tsx  provenance-stamp.tsx  status-indicator.tsx
frontend/components/capture/: capture-form.test.tsx  capture-form.tsx  capture-view.test.tsx  capture-view.tsx  category-buttons.test.tsx  category-buttons.tsx  context-suggestions.test.tsx  context-suggestions.tsx  hidden-term.test.tsx  machine-select.test.tsx  machine-select.tsx  sync-status.test.tsx  sync-status.tsx  voice-capture-placeholder.tsx
frontend/components/cockpit/: cockpit-kpi-row.test.tsx  cockpit-kpi-row.tsx  cockpit-scope-bar.test.tsx  cockpit-scope-bar.tsx  cockpit-view-switch.test.tsx  cockpit-view-switch.tsx  cockpit-view.test.tsx  cockpit-view.tsx  drift-heatmap.test.tsx  drift-heatmap.tsx  heatmap-legend.tsx  hidden-term.test.tsx  priority-column.test.tsx  priority-column.tsx
frontend/components/event-chains/: chain-symbol.tsx  chain-trigger-panel.test.tsx  chain-trigger-panel.tsx  chains-aggregate.tsx  chains-view.test.tsx  chains-view.tsx  event-node.tsx  hidden-term.test.tsx  narrative-panel.tsx  pin-chain-action.tsx  saved-chains-list.test.tsx  saved-chains-list.tsx  sibling-chains.test.tsx  sibling-chains.tsx  timeline-column.tsx  timeline-narrative.test.tsx  timeline-narrative.tsx
frontend/components/insights/: insights-hub.tsx
frontend/components/machine/: machine-alarms.test.tsx  machine-alarms.tsx  machine-card-grid.test.tsx  machine-card-grid.tsx  (+23 more)
frontend/scripts/: build-tokens.ts
frontend/tokens/: contrast.test.ts  contrast.ts  primitive.ts  themes.ts
migrations/: env.py
migrations/versions/: 0001_initial_schema.py  0002_timescale_setup.py  0003_reasoner_explanations.py  0004_worker_notes_hnsw.py  0005_failure_predictions.py  0006_failure_predictions_checks.py  0007_failure_recommendations.py  0008_user_subscription_scope.py  0009_event_chain_snapshot.py  0010_audit_trail_topology.py  0011_drift_profiles.py  0012_worker_notes_text_tsv.py  0013_archive_sources_text_tsv.py
src/foreman/: __init__.py  config.py  logging_setup.py  main.py
tests/: conftest.py
tests/archive/: test_archive_router.py  test_archive_search.py
tests/audit/: test_audit_api.py  test_mcp_audit.py  test_writer.py
tests/embeddings/: conftest.py  test_backends.py  test_backfill.py  test_openai_backend.py  test_provider.py
tests/ingestion/: test_note_embedding.py
tests/integration/: test_auth.py  test_backfill_ingest.py  test_crud_resources.py  test_dashboard_routes.py  test_db_session.py  test_drift_hitl_ack.py  test_drift_profile_persistence.py  test_drift_validation.py  test_dual_write.py  test_health.py  test_live_worker.py  test_maintenance_events.py  test_me.py  test_metrics_endpoint.py  test_park_seed.py  test_readings_batch.py  test_reads_card.py  test_reads_latest_values.py  test_reads_overview.py  test_reads_stream.py  test_reads_trend.py  test_realtime_authz.py  test_realtime_listener.py  test_realtime_notify.py  test_realtime_wiring.py  test_realtime_ws.py  test_reasoner_rbac.py  test_redact_real.py  test_seed_idempotent.py  test_sim_worker_notes.py  test_substrate_backfill.py  test_substrate_smoke.py  test_ws_ticket.py
tests/llm/: conftest.py  test_backends_fallback.py  test_cache_determinism.py  test_config.py  test_errors.py  test_gateway.py  test_grounding.py  test_metrics.py  test_rate_limit.py
tests/mcp/: conftest.py  test_auth.py  test_pii.py  test_server.py  test_tools.py  test_transparency.py
tests/migrations/: test_migration_0010.py  test_migration_0011.py
tests/notes/: test_hybrid_search.py  test_search.py  test_search_router.py
tests/reasoners/: __init__.py
tests/topology/: test_topology.py
tests/unit/: test_adapter_contract.py  test_baseline_residual.py  test_config.py  test_dashboard_schemas.py  test_datapoint_status.py  test_deps.py  test_drift_corridor.py  test_drift_detector.py  test_drift_service.py  test_drift_validation_logic.py  test_live_stream.py  test_metrics.py  test_normalized.py  test_park_scenarios.py  test_pseudonymize.py  test_reads_stream.py  test_realtime_channels.py  test_realtime_hub.py  test_realtime_topics.py  test_redact.py  test_registry.py  test_relevance_filter.py  test_runner.py  test_scenario.py  test_security.py  test_security_ws_ticket.py  test_semantic.py  test_signals.py  test_status.py  test_steady_state.py  test_substrate_backfill.py  test_substrate_client.py
(+502 files in other folders)
