# ============================================================
#  FOREMAN — pyproject.toml
#  Zweck: Projekt-Metadaten, Laufzeit- und Dev-Abhängigkeiten,
#         strikte Typ-/Lint-/Test-Konfiguration (Quality Gates §10.2).
#  Architektur-Einordnung: Wurzel des Backend-Pakets `foreman`
#         (Schicht 2: FOREMAN-Plattform). Build/Run via uv.
# ============================================================

[project]
name = "foreman"
version = "0.2.0"
description = "FOREMAN — Production Intelligence with Memory (MSIT AI-Track Capstone)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "patricznr1" }]

dependencies = [
    # --- Web-Framework & ASGI ---
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    # --- Datenbank: async SQLAlchemy 2.0 + asyncpg + Migrationen ---
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "greenlet>=3.0",
    # Vektor-Spalte worker_notes.embedding (vector(1024); Index erst später)
    "pgvector>=0.3.6",
    # --- Validierung & Settings ---
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "email-validator>=2.1",
    # --- Auth: JWT + Passwort-Hashing ---
    "pyjwt>=2.8",
    "bcrypt>=4.1",
    # --- HTTP-Client für das Gedächtnis-Substrat (NEXUS-Anbindung) ---
    "httpx>=0.27",
    # --- Szenario-Definition des Simulations-Adapters (F3): YAML-Parsing ---
    "pyyaml>=6.0",
    # --- Datenschutz: NER-Maskierung von Freitext (Presidio + spaCy) ---
    # Das spaCy-Modell de_core_news_lg wird separat geladen
    # (siehe README: `python -m spacy download de_core_news_lg`).
    "presidio-analyzer>=2.2",
    "presidio-anonymizer>=2.2",
    "spacy>=3.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.5",
    "asgi-lifespan>=2.1",
    # Type-Stubs für PyYAML (mypy --strict)
    "types-pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/foreman"]

# ------------------------------------------------------------
#  mypy — strict (Quality Gate §10.2: 0 Fehler, kein `Any`)
# ------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
no_implicit_reexport = true
plugins = ["pydantic.mypy"]
mypy_path = "src"
packages = ["foreman"]
# Presidio bringt py.typed, aber untypisierte Signaturen mit — Aufrufe in diese
# Pakete von der no-untyped-call-Prüfung ausnehmen (strict bleibt für FOREMAN-Code).
untyped_calls_exclude = ["presidio_analyzer", "presidio_anonymizer"]

# Dritt-Bibliotheken ohne Type-Stubs (Presidio/spaCy) — gezielt nachsichtig,
# damit `strict` über FOREMANs eigenen Code voll greift, ohne an Fremd-Code zu scheitern.
[[tool.mypy.overrides]]
module = [
    "presidio_analyzer",
    "presidio_analyzer.*",
    "presidio_anonymizer",
    "presidio_anonymizer.*",
    "spacy",
    "spacy.*",
    "pgvector",
    "pgvector.*",
    "asyncpg",
    "asyncpg.*",
]
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

# ------------------------------------------------------------
#  ruff — Lint (Quality Gate §10.2: clean)
# ------------------------------------------------------------
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "W",   # pycodestyle
    "F",        # pyflakes
    "I",        # isort
    "N",        # pep8-naming
    "UP",       # pyupgrade
    "B",        # bugbear
    "C4",       # comprehensions
    "ASYNC",    # async-Fallen
    "RUF",      # ruff-spezifisch
]
ignore = [
    "E501",  # Zeilenlänge: durch Formatter geregelt
]

[tool.ruff.lint.per-file-ignores]
# Tests dürfen Fixtures/Asserts freier nutzen
"tests/**" = ["N802", "N803"]
"migrations/**" = ["N806", "E402"]

# ------------------------------------------------------------
#  pytest + coverage (Quality Gate §10.2: grün, Coverage ≥ 85 %)
# ------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# NER-Test (echtes spaCy-Modell) ist opt-in; Default-Gate bleibt schnell.
# Explizit ausführen: uv run pytest -m ner
addopts = "-x --strict-markers -m 'not ner' --cov=foreman --cov-report=term-missing --cov-fail-under=85"
markers = [
    "integration: Test braucht eine laufende (Timescale-)DB",
    "smoke: End-to-End-Smoke-Pfad",
    "ner: Test lädt das echte spaCy-de-Modell (opt-in, ~560 MB)",
]

[tool.coverage.run]
branch = true
source = ["foreman"]
omit = ["src/foreman/__init__.py"]
# SQLAlchemy 2.0 async überbrückt sync/async via greenlet — ohne diese
# Concurrency-Angabe verliert coverage nach dem ersten DB-await die Spur.
concurrency = ["greenlet", "thread"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "\\.\\.\\.",
]
